refactor(dao): clean up DAO layers and align services/DTOs with convention
- Cleaned up DAO structure: removed deprecated PersonDAO, WalkInCandidateDAO, and their implementations.
- Updated UserDAOImpl, ExamRegistrationDAOImpl, PaymentDAOImpl, and ExamSessionDAOImpl to align with package conventions.
- Updated DTO and Service interfaces to match the revised schema.
- Added SQL seed data for examiner allocation samples.